use function to get values

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
         <form>
             <label for="tag">tag</label>
-            <input type="text" id="tag" value="h1">
+            <input type="text" id="tag">
 
             <label for="tag">id</label>
-            <input type="text" id="id" value="main_header">
+            <input type="text" id="id">
 
             <label for="tag">class</label>
-            <input type="text" id="class" value="h1_class">
+            <input type="text" id="class">
 
             <label for="tag">text</label>
-            <input type="text" id="text" value="Welcome">
+            <input type="text" id="text">
 
         </form>
 
