--- a/index.html
+++ b/index.html
@@ -8,33 +8,47 @@
             padding: 50px
         }
 
-        form {
-            margin: 25px 0;
-        }
+
 
         form input {
             display: block;
             margin: 10px 0;
+            border: 1px solid dodgerblue;
+            background-color: white;
+            padding: 5px;
+            color: black;
+            width: 75%;
+        }
+
+        .section-1,
+        .section-2 {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
         }
 
         .div-one {
-            float: left;
             width: 50%;
         }
 
         .div-two {
-            float: right;
             width: 50%;
 
         }
 
         code {
             display: block;
-            width: 400px;
+            width: 500px;
             height: 200px;
             padding: 25px;
             background-color: black;
             color: white;
+        }
+
+        button {
+            padding: 5px 10px;
+            ;
+
         }
     </style>
 </head>
@@ -42,30 +56,64 @@
 <body>
     <h1>Generate components</h1>
 
-    <div class="div-one">
+    <div class="section-1">
 
-        <form>
-            <label for="tag">tag</label>
-            <input type="text" id="tag">
+        <div class="div-one">
+            <h3>General components</h3>
+            <form>
+                <label for="tag">tag</label>
+                <input type="text" id="tag">
 
-            <label for="tag">id</label>
-            <input type="text" id="id">
+                <label for="tag">id</label>
+                <input type="text" id="id">
 
-            <label for="tag">class</label>
-            <input type="text" id="class">
+                <label for="tag">class</label>
+                <input type="text" id="class">
 
-            <label for="tag">text</label>
-            <input type="text" id="text">
+                <label for="tag">text</label>
+                <input type="text" id="text">
 
-        </form>
+            </form>
 
-        <button id="button">get markup</button>
+            <button id="button">get markup</button>
+
+        </div>
+
+        <div class="div-two">
+            <h3>Code</h3>
+            <code id="output"></code>
+        </div>
 
     </div>
 
-    <div class="div-two">
-        <h3>Code</h3>
-        <code id="output"></code>
+
+    <div class="section-2">
+
+        <div class="div-one">
+            <h3>input components</h3>
+            <form>
+                <label for="label">label</label>
+                <input type="text" id="label">
+
+                <label for="type">input type</label>
+                <input type="text" id="input_type">
+
+                <label for="tag">id</label>
+                <input type="text" id="input_id">
+
+                <label for="tag">class</label>
+                <input type="text" id="input_class">
+
+            </form>
+
+            <button id="button-2">get markup</button>
+        </div>
+
+        <div class="div-two">
+            <h3>Code</h3>
+            <code id="output-2"></code>
+        </div>
+
     </div>
 
     <script src="js/code_generator.js"></script>
