added copy code buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         code {
             display: block;
             width: 500px;
-            height: 200px;
+            height: 100px;
             padding: 25px;
             background-color: black;
             color: white;
@@ -47,8 +47,10 @@
 
         button {
             padding: 5px 10px;
-            ;
+        }
 
+        .clip-button {
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -82,6 +84,7 @@
         <div class="div-two">
             <h3>Code</h3>
             <code id="output"></code>
+            <button class="clip-button" id="clip-1">copy code</button>
         </div>
 
     </div>
@@ -112,6 +115,7 @@
         <div class="div-two">
             <h3>Code</h3>
             <code id="output-2"></code>
+            <button class="clip-button" id="clip-2">copy code</button>
         </div>
 
     </div>
