replace code tag with textarea

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         }
 
-        code {
+        textarea {
             display: block;
             width: 500px;
             height: 100px;
@@ -83,7 +83,7 @@
 
         <div class="div-two">
             <h3>Code</h3>
-            <code id="output"></code>
+            <textarea id="output"></textarea>
             <button class="clip-button" id="clip-1">copy code</button>
         </div>
 
@@ -114,7 +114,7 @@
 
         <div class="div-two">
             <h3>Code</h3>
-            <code id="output-2"></code>
+            <textarea id="output-2"></textarea>
             <button class="clip-button" id="clip-2">copy code</button>
         </div>
 
