--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
         .clip-button {
             margin: 5px 0;
         }
+
+        .tooltip {
+            position: relative;
+            display: inline-block;
+        }
+
+        .tooltip .tooltip_msg {
+            visibility: hidden;
+            width: 140px;
+            background-color: limegreen;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px;
+            position: absolute;
+            z-index: 1;
+            bottom: 150%;
+            left: 50%;
+            margin-left: -75px;
+            transition: opacity 0.3s;
+        }
+
+        .tooltip:hover .tooltip_msg {
+            visibility: visible;
+        }
     </style>
 </head>
 
@@ -84,7 +109,10 @@
         <div class="div-two">
             <h3>Code</h3>
             <textarea id="output"></textarea>
-            <button class="clip-button" id="clip-1">copy code</button>
+            <div class="tooltip">
+                <button class="clip-button" id="clip-1">copy code</button>
+                <span class="tooltip_msg" id="tooltip_1">Copy</span>
+            </div>
         </div>
 
     </div>
@@ -115,7 +143,11 @@
         <div class="div-two">
             <h3>Code</h3>
             <textarea id="output-2"></textarea>
-            <button class="clip-button" id="clip-2">copy code</button>
+
+            <div class="tooltip">
+                <button class="clip-button" id="clip-2">copy code</button>
+                <span class="tooltip_msg" id="tooltip_2">Copy</span>
+            </div>
         </div>
 
     </div>
