--- a/index.html
+++ b/index.html
@@ -129,10 +129,13 @@
                 <label for="type">input type</label>
                 <input type="text" id="input_type">
 
-                <label for="tag">id</label>
+                <label for="input_id">id</label>
                 <input type="text" id="input_id">
 
-                <label for="tag">class</label>
+                <label for="input_value">value</label>
+                <input type="text" id="input_value">
+
+                <label for="input_class">class</label>
                 <input type="text" id="input_class">
 
             </form>
