add name attribute

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                 <label for="input_value">value</label>
                 <input type="text" id="input_value">
 
+                <label for="input_name">name</label>
+                <input type="text" id="input_name">
+
                 <label for="input_class">class</label>
                 <input type="text" id="input_class">
 
